--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.example</groupId>
     <artifactId>LiBot</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <build>
         <plugins>
             <plugin>
@@ -40,12 +38,17 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.3.0_277</version>
+            <version>5.0.0-alpha.4</version>
         </dependency>
         <dependency>
             <groupId>io.github.tors42</groupId>
             <artifactId>chariot</artifactId>
-            <version>0.0.34</version>
+            <version>0.0.38</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.sornerol</groupId>
+            <artifactId>chesscom-pubapi-wrapper</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
