LISEBOT 5.3 LISE AI support + bug fixes + spam detection

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
     </build>
     <repositories>
         <repository>
+            <id>lila-maven</id>
+            <name>lila-maven</name>
+            <url>https://raw.githubusercontent.com/lichess-org/lila-maven/master</url>
+        </repository>
+        <repository>
             <id>jcenter</id>
             <name>jcenter-bintray</name>
             <url>https://jcenter.bintray.com/</url>
@@ -41,6 +46,11 @@
             <version>5.0.0-beta.2</version>
         </dependency>
         <dependency>
+            <groupId>org.lichess</groupId>
+            <artifactId>scalachess_3</artifactId>
+            <version>14.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
@@ -48,7 +58,7 @@
         <dependency>
             <groupId>io.github.tors42</groupId>
             <artifactId>chariot</artifactId>
-            <version>0.0.57</version>
+            <version>0.0.62</version>
         </dependency>
         <dependency>
             <groupId>io.github.sornerol</groupId>
