--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>5.1.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
