--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
             <artifactId>chesslib</artifactId>
             <version>1.3.3</version>
         </dependency>
+          <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version> 
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+        </dependency>
     </dependencies>
 
 </project>
