--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                  <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
                 <version>3.12.1</version>
             </plugin>
 
