--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
     <artifactId>ChessLise</artifactId>
-    <version>14.3-SNAPSHOT</version>
+    <version>15.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -28,7 +28,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>Runner.Main</mainClass>
+                            <mainClass>runner.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -56,11 +56,15 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>net.dv8tion</groupId>
+            <groupId>com.github.freya022</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-beta.24</version>
+            <version>7c7d09bf4dee12088fabd4d5c9b88380f75a289b</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
