--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
     <artifactId>ChessLise</artifactId>
-    <version>15.0-SNAPSHOT</version>
+    <version>16.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -56,9 +56,9 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>com.github.freya022</groupId>
+            <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>7c7d09bf4dee12088fabd4d5c9b88380f75a289b</version>
+            <version>5.3.0</version>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
@@ -73,12 +73,12 @@
         <dependency>
             <groupId>io.github.tors42</groupId>
             <artifactId>chariot</artifactId>
-            <version>0.1.11</version>
+            <version>0.1.12</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
-            <version>5.0.1</version>
+            <version>5.3.1</version>
         </dependency>
         <dependency>
             <groupId>io.github.sornerol</groupId>
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.11.3</version>
+            <version>5.11.4</version>
         </dependency>
     </dependencies>
 
